# jupyter-ai-personas

./: .gitignore  .jupyter_ystore.db  ci_log_optimization_prd.md  generated_prd.md  install_taskmaster.sh  package-lock.json  prd.txt  pyproject.toml  requirements.txt  simple_prd.txt  simple_test.py  test.chat  test1.py  test11.chat  test2.chat  test22.chat  test_alt_model.py  test_claude_api.py  test_command_parsing.py  test_direct_taskmaster.py  test_minimal.py  test_pr_taskmaster.py
.github/: pull_request_template.md
.github/workflows/: run-tests.yml
.taskmaster/: config.json  state.json
.taskmaster/tasks/: tasks.json
config/: pr_creation_config.yaml
jupyter_ai_personas/: __init__.py
jupyter_ai_personas/emoji_persona/: persona.py
jupyter_ai_personas/knowledge_graph/: KG_notebook.ipynb  agent.py  ast_rag_analyzer.py  ast_rag_tools.py  bulk_analyzer.py  code_analysis_tool.py  langchain_rag_analyzer.py  langchain_tools.py  schema_validator.py
jupyter_ai_personas/pr_creation_persona/: README.md  __init__.py  enhanced_file_tools.py  persona.py  repo_structure_tools.py  template.py
jupyter_ai_personas/pr_fix_persona/: __init__.py  apply_fixes.py  fetch_pr_comments.py  persona.py  repo_analysis_tools.py
jupyter_ai_personas/pr_review_persona/: ci_tools.py  conftest.py  fetch_ci_failures.py  persona.py  persona_gemini.py  pr_comment_tool.py  query_generation_agent.py  repo_analysis_tools.py  test_agent.py  test_persona.py
jupyter_ai_personas/task_master/: __init__.py  example_usage.py  hybrid_orchestrator.py  hybrid_pr_master.py  managed_team_master.py  mcp_task_master.py  persona_demo.py  persona_task_master.py  pr_task_master.py  prd_agent.py  setup_task_master_mcp.md  task_agent.py  task_orchestrator.py  task_pr_persona.py  taskmaster_client.py  test.py  test_comparison.py  test_mcp_mock.py
jupyter_ai_personas/test_persona/: persona.py
tests/: test_persona.py  test_pr_creation_persona.py
