[project]
name = "jupyter-ai-personas"
version = "0.1.0"
description = "Enhancing Jupyter AI with Personas"
readme = "README.md"
authors = [
    { name = "S R Das", email = "srdas@scu.edu" }
]
requires-python = ">=3.9"

dependencies = [
    "jupyter_ai>=3.0.0a1",
    "tree_sitter",
    "tree_sitter_python"
]

[project.optional-dependencies]
finance = [
    "boto3",
    "lancedb", 
    "tantivy", 
    "pypdf", 
    "faiss-cpu",
    "duckdb",
    "numpy",
    "pandas",
    "scikit-learn",
    "scipy",
    "mcp",
    "agno",
    "duckduckgo-search",
    "matplotlib",
    "statsmodels",
    "yfinance",
    "openai"
]
emoji = [
    "emoji",
    "langchain-aws"
]

software_team = [ 
    "agno",
    "boto3",
    "langchain",
   ]


pr_review = [
    "agno",
    "boto3",
    "pygithub",
    "langchain-core",
    "neo4j",
    "tree-sitter",
    "tree-sitter-python",
    ]

task_master = [
    "agno",
    "boto3",
    "requests",
    "pygithub",
    ]

all = ["jupyter-ai-personas[finance,emoji,software_team,pr_review,task_master]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.entry-points."jupyter_ai.personas"]

pr_creation_persona = "jupyter_ai_personas.pr_creation_persona.persona:PRCreationPersona"