[project]
name = "jupyter-ai-personas"
version = "0.1.0"
description = "Enhancing Jupyter AI with Personas"
readme = "README.md"
authors = [
    { name = "S R Das", email = "srdas@scu.edu" }
]
requires-python = ">=3.9"

dependencies = [
    "jupyter_ai>=3.0.0a1"
]

[project.optional-dependencies]
finance = [
    "boto3",
    "lancedb", 
    "tantivy", 
    "pypdf", 
    "faiss-cpu",
    "duckdb",
    "numpy",
    "pandas",
    "scikit-learn",
    "scipy",
    "mcp",
    "agno",
    "duckduckgo-search",
    "matplotlib",
    "statsmodels",
    "yfinance",
    "openai"
]
emoji = [
    "emoji",
    "langchain-aws"
]

software_team = [ 
    "agno",
    "boto3",
    "langchain",
   ]


pr_review = [
    "agno>=0.8.0",  # Core agent framework
    "boto3>=1.28.0", # AWS SDK with Bedrock support
    "pygithub>=2.1.0", # GitHub API
    "langchain>=0.0.350", # LangChain core
    "langchain-community>=0.0.10", # Community integrations
    "botocore>=1.31.0", # AWS core
    "typing-extensions>=4.8.0", # Enhanced typing support
    "mypy>=1.7.0", # Static type checking
    "ruff>=0.1.6", # Fast Python linter
    "pytest>=7.4.0", # Testing framework
    "pytest-asyncio>=0.21.0", # Async test support
    "pytest-cov>=4.1.0", # Coverage reporting
    "requests>=2.31.0", # HTTP client
    "aiohttp>=3.9.0", # Async HTTP client
    "types-requests>=2.31.0.0", # Type stubs for requests
    "types-aiohttp>=3.9.0.0", # Type stubs for aiohttp
]

all = ["jupyter-ai-personas[finance,emoji,software_team,pr_review]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.entry-points."jupyter_ai.personas"]
finance_persona = "jupyter_ai_personas.finance_persona.persona:FinancePersona"
emoji_persona = "jupyter_ai_personas.emoji_persona.persona.persona:EmojiPersona"
software_team_persona = "jupyter_ai_personas.software_team_persona.persona:SoftwareTeamPersona"

pr_review_persona = "jupyter_ai_personas.pr_review_persona.persona:PRReviewPersona"