[project]
name = "jupyter-ai-personas"
version = "0.1.0"
description = "Enhancing Jupyter AI with Personas"
readme = "README.md"
authors = [
    { name = "S R Das", email = "srdas@scu.edu" }
]
requires-python = ">=3.9"

dependencies = [
    "jupyter_ai>=3.0.0a1",
    "neo4j>=5.0.0",
    "tree-sitter>=0.20.0",
    "tree-sitter-python>=0.20.0"
]

[project.optional-dependencies]
finance = [
    "boto3",
    "lancedb", 
    "tantivy", 
    "pypdf", 
    "faiss-cpu",
    "duckdb",
    "numpy",
    "pandas",
    "scikit-learn",
    "scipy",
    "mcp",
    "agno",
    "duckduckgo-search",
    "ddgs",
    "matplotlib",
    "statsmodels",
    "yfinance",
    "openai"
]
emoji = [
    "emoji",
    "langchain-aws"
]

software_team = [ 
    "agno",
    "boto3",
    "langchain",
   ]


pr_review = [
    "agno>=0.8.0",
    "boto3>=1.26.0",
    "pygithub>=2.1.0",
    "langchain-core>=0.1.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",  # For parallel test execution
    "pytest-benchmark>=4.0.0"  # For performance testing
    ]

pr_fix = [
    "agno>=0.8.0",
    "boto3>=1.26.0",
    "pygithub>=2.1.0",
    "langchain-core>=0.1.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0"
    ]
all = ["jupyter-ai-personas[finance,emoji,software_team,pr_review,pr_fix]"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.entry-points."jupyter_ai.personas"]
finance_persona = "jupyter_ai_personas.finance_persona.persona:FinancePersona"
emoji_persona = "jupyter_ai_personas.emoji_persona.persona:EmojiPersona"
software_team_persona = "jupyter_ai_personas.software_team_persona.persona:SoftwareTeamPersona"
pr_review_persona = "jupyter_ai_personas.pr_review_persona.persona:PRReviewPersona"
pr_fix_persona = "jupyter_ai_personas.pr_fix_persona.persona:PRFixPersona"
